--- a/templates/base.html
+++ b/templates/base.html
@@ -34,6 +34,12 @@
       >
         Movies
       </a>
+      <a
+        class="nav-link"
+        href="{% url 'core:TopMovies' %}"
+      >
+        Top 10 Movies
+      </a>
     </nav>
   </div>
 </div>
